--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DDoS Live Map</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <!-- Globe will be injected here -->
-  <script type="module" src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Three.js + GeoJSON</title>
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
+     <script type="importmap">
+      {
+				"imports": {
+					"three": "https://cdn.jsdelivr.net/npm/three@0.170/build/three.module.js",
+          "jsm/": "https://cdn.jsdelivr.net/npm/three@0.170/examples/jsm/",
+          "three-globe": "https://esm.sh/three-globe"
+        }
+      }
+    </script>
+  </head>
+  <body>
+    <script type="module" src="index.js"></script>
+  </body>
 </html>
